Fixed line break in teamnavbar

--- a/src/components/teamnavbar/teamnavbar.css
+++ b/src/components/teamnavbar/teamnavbar.css
@@ -11,6 +11,7 @@
 }
 
 .nav h1 {
+    white-space: nowrap;
     color: white;
     font-size: 4vmin;
     margin-right: 4vw;
